# multifast

./: CMakeLists.txt
ahocorasick/: CMakeLists.txt
